--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,4 +1,4 @@
-input {
+.input {
   border: 1px solid #808080;
   border-radius: 4px;
   width: 272px;
@@ -19,17 +19,17 @@ input {
     color 250ms ease-in-out;
 }
 
-input:hover {
+.input:hover {
   border-color: #000000;
 }
 
-input:focus {
+.input:focus {
   outline: none;
   border-color: #4e75ff;
   box-shadow: none;
 }
 
-input:disabled {
+.input:disabled {
   border-color: #808080;
   color: #808080;
 }
@@ -50,7 +50,7 @@ input:disabled {
   line-height: 1.2;
 }
 
-button {
+.button {
   border-radius: 8px;
   border: none;
   padding: 8px 16px;
@@ -70,12 +70,12 @@ button {
     color 250ms ease-in-out;
 }
 
-button:hover,
-button:focus {
+.button:hover,
+.button:focus {
   background-color: #6c8cff;
 }
 
-button:disabled {
+.button:disabled {
   background-color: #cfcfcf;
   color: #989898;
 }
